--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-resxtojson",
   "description": "Convert resx files to JSON.",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "homepage": "https://github.com/ericb81/grunt-resxtojson",
   "author": {
     "name": "Eric Beragg",
@@ -14,12 +14,10 @@
   "bugs": {
     "url": "https://github.com/ericb81/grunt-resxtojson/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/ericb81/grunt-resxtojson/blob/master/LICENSE-MIT"
-    }
-  ],
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/ericb81/grunt-resxtojson/blob/master/LICENSE-MIT"
+  }],
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -30,13 +28,15 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt-contrib-nodeunit": "^0.3.3"
+  },
+  "dependencies": {
     "xmldoc": "^0.1.2"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin", "resx", "json"
   ]
 }
