--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "xmldoc": "^0.3.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.0"
   },
   "keywords": [
     "gruntplugin",
